package commad added

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "add": "ng g c module/filter-item"
+    "update":"ng update @angular/core @angular/cli"
   },
   "private": true,
   "dependencies": {
