--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "update": "ng update @angular/core@8 @angular/cli@8 -C"
+    "update": "ng update @angular/core@8 @angular/cli@8"
   },
   "private": true,
   "dependencies": {
